Fixed Layout Problems and Slider functionalities

--- a/ready4cloud/src/components/Question/Question.css
+++ b/ready4cloud/src/components/Question/Question.css
@@ -1,4 +1,4 @@
-button{
+button {
   background-color: #008CBA;
   border: none;
   color: white;
@@ -8,14 +8,12 @@ button{
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-  transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 8px;
 
 }
 
-
 .button-clicked {
-  background-color: #888;
-  border: 3px solid #008CBA;
+  background-color: #888 !important;
+  outline: 3px solid #008CBA !important;
 }
